# ChangeLog for app-emacs/grep-edit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/50grep-edit-gentoo.el, +grep-edit-2.5.ebuild, +metadata.xml:
  initial import from bug 180170, by MATSUYAMA Tomohiro
  <matsuyama@ariel-networks.com>
