@@ -1,5 +1,5 @@
-AUX 50grep-edit-gentoo.el 99 RMD160 7423337d6565820a421dd3af5722c399c3616eb0 SHA1 01782e014d260de3f3e56ff2b7e0c36b3c902371 SHA256 6b6d1f55b61689ca2be518f2b3aed1b023d10617fd6a3b15103f17d00ae382e8
+AUX 50grep-edit-gentoo.el 78 RMD160 859471d28b8e26a922cba39d72c928beb68e40a4 SHA1 6769801b55b40ef4a880fc42e75d26507aece59e SHA256 2f14a081c6c25d3a516e5feb89c1f97a591aa5b6e19bbec764228146b5829ede
 DIST grep-edit-2.5.el.bz2 3397 RMD160 2783da0d607dba15c20ff0d3674527ea4138b1b0 SHA1 fddd8ce813fbb489a965210fd825b3c165321d49 SHA256 778801f851b3a496cd0def0253634491d45f6f402a49b44b0564d8186bdeebe0
-EBUILD grep-edit-2.5.ebuild 389 RMD160 0af9c709e7401c72f7cef3ffa4f95081e27459bd SHA1 c76711a70dc3aa59e14731d8e0ef55405cf515b9 SHA256 88432bafa037e6be4ac756c325a510d7713ba45e13e09b6b42f69f888f1df780
-MISC ChangeLog 335 RMD160 9f68a2851bf209d6d27e3862a91d3f038555d390 SHA1 58b24a35831de90061069d5a37042203345ab537 SHA256 77b1851d8cc9bd14b73981e048cea548c47b012214b01e97b62bd36fd13c0f1d
+EBUILD grep-edit-2.5.ebuild 572 RMD160 b0dcdfb086e49cc1b17a4e84dadc8cf70cf4ed58 SHA1 4ca50767e3f7efa8687afae9eab87231984d9d7f SHA256 eb27b95b84ce71cd7f7d62eabb6ed3902656d05a5439fabfe92a838369e895fa
+MISC ChangeLog 563 RMD160 9c7ef1b7e103f355061b2e4e4532596985bb0ca1 SHA1 b66019761a2aed268c7a8e675bc2ffe11e7cf2ee SHA256 3bb430ef58df7f6c93dc6dbfde2c3adcc2be1ceb81d83044feb2ffdc05d4af3b
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
