@@ -2,4 +2,3 @@
 ;;; grep-edit site-lisp configuration
 
 (add-to-list 'load-path "@SITELISP@")
-(require 'grep-edit)
