@@ -1,6 +1,11 @@
 # ChangeLog for app-emacs/grep-edit
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  24 Jan 2008; Ulrich Mueller <ulm@gentoo.org> files/50grep-edit-gentoo.el,
+  grep-edit-2.5.ebuild:
+  Fix site-init file. grep-edit replaces standard Emacs functions by adviced
+  versions, so we cannot load it unconditionally.
 
   28 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   +files/50grep-edit-gentoo.el, +grep-edit-2.5.ebuild, +metadata.xml:
